[tool.poetry]
name = "todo-backend"
version = "0.1.0"
description = ""
authors = ["Paulo Henrique Cuchi <paulo@cuchi.me>"]

[tool.poetry.dependencies]
python = "^3.9.1"
Flask = "^1.1.2"
flask-expects-json = "^1.5.0"
flask-shell-bpython = "^1.0.2"
psycopg2 = "^2.8.6"
SQLAlchemy = "^1.3.22"
Flask-SQLAlchemy = "^2.4.4"
alembic = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
